# Kinesis

./: .editorconfig  .gitignore  Makefile  README.md  packages.txt  pyproject.toml  streamlit_app.py
.streamlit/: config.toml
apps/: exp001_streamlit.py
docs/: vision.md
docs/experiments/: EXP-001-dance-pose-estimation.md  EXP-002-reference-movement-matching.md
src/kinesis/: __init__.py  cli.py
src/kinesis/experiments/: __init__.py
src/kinesis/experiments/exp001/: __init__.py  config.py  csv_export.py  drawing.py  frame_analysis.py  landmarks.py  manifest.py  metrics.py  model_assets.py  movement_summary.py  plots.py  processor.py  quality.py  smoothing.py  types.py
src/kinesis/experiments/exp002/: __init__.py  group_reference.py  matching.py  pipeline.py
src/kinesis/ui/: __init__.py  runtime_paths.py  streamlit_theme.py
tests/: test_exp001_config.py  test_exp001_drawing.py  test_exp001_metrics.py  test_exp001_model_assets.py  test_exp001_processor.py  test_exp001_quality.py  test_exp002_group_reference.py  test_exp002_matching.py  test_exp002_pipeline.py  test_streamlit_app.py
