[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinesis"
version = "0.1.0"
description = "Technology experiments for understanding, improving, and preserving human movement."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Kinesis" }]
license = { text = "Proprietary" }
dependencies = [
    "mediapipe>=0.10.35,<0.11",
    "numpy>=1.26,<3",
    "opencv-python>=4.10,<5",
    "streamlit>=1.36,<2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
kinesis = "kinesis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

